adds a proper preview image

--- a/index.html
+++ b/index.html
@@ -49,30 +49,17 @@
           </div>
         </div>
         <div class="hero-visual">
-          <div class="analysis-preview">
-            <div class="code-block">
-              <div class="code-header">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="filename">analysis.txt</span>
-              </div>
-              <div class="code-content">
-                <div class="line">
-                  <span class="complexity-low">Simple text structure</span>
-                  <span class="score">Score: 2.1</span>
-                </div>
-                <div class="line">
-                  <span class="complexity-medium"
-                    >Moderate complexity detected</span
-                  >
-                  <span class="score">Score: 4.7</span>
-                </div>
-                <div class="line">
-                  <span class="complexity-high"
-                    >Complex linguistic patterns</span
-                  >
-                  <span class="score">Score: 8.3</span>
+          <div class="interface-preview">
+            <div class="screenshot-container" onclick="openImageModal()">
+              <img
+                src="images/boltzmann-interface-screenshot.png"
+                alt="Boltzmann Analyser Interface Screenshot"
+                class="interface-screenshot"
+              />
+              <div class="screenshot-overlay">
+                <div class="overlay-badge">
+                  <span class="badge-text">Live Interface Preview</span>
+                  <span class="click-hint">Click to enlarge</span>
                 </div>
               </div>
             </div>
@@ -249,6 +236,19 @@
         </div>
       </div>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal" onclick="closeImageModal()">
+      <div class="modal-content">
+        <span class="modal-close" onclick="closeImageModal()">&times;</span>
+        <img
+          id="modalImage"
+          class="modal-image"
+          src="images/boltzmann-interface-screenshot.png"
+          alt="Boltzmann Analyser Interface - Full Size"
+        />
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
