adds a link to my talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,29 @@
     <section id="features" class="features">
       <div class="container">
         <h2 class="section-title">What is Lexical Complexity?</h2>
+
+        <!-- Video Section -->
+        <div class="video-section">
+          <div class="video-thumbnail-container">
+            <a
+              href="https://www.youtube.com/watch?v=rCxbM3IX0X4"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="video-thumbnail-link"
+            >
+              <img
+                src="images/talk-screenshot.png"
+                alt="What is Lexical Complexity? - YouTube Video"
+                class="video-thumbnail-image"
+              />
+            </a>
+          </div>
+          <p class="video-description">
+            Learn about the fundamentals of lexical complexity analysis and how
+            it can improve your understanding of text structure and readability.
+          </p>
+        </div>
+
         <div class="features-grid">
           <div class="feature-card">
             <div class="feature-icon">📊</div>
