block modal if it's a 1-wide view

--- a/index.html
+++ b/index.html
@@ -101,17 +101,18 @@
     <!-- Code Comparison Section -->
     <section class="code-comparison">
       <div class="code-comparison-header">
-        <h2 class="section-title">Solution Comparison</h2>
-        <p class="section-description">
-          Compare different approaches and see how lexical complexity varies
-          across implementations.
-        </p>
+        <h2 class="section-title">
+          What do different complexity levels look like?
+        </h2>
       </div>
 
       <div class="code-grid">
         <div class="code-column">
           <h3 class="code-title">501 Complexity</h3>
-          <div class="code-block" onclick="openCodeModal(this, '501 Complexity - TypeScript')">
+          <div
+            class="code-block"
+            onclick="openCodeModal(this, '501 Complexity - TypeScript')"
+          >
             <pre><code class="language-typescript">
 type Rover = {
   heading: string;
@@ -240,7 +241,10 @@ export function commandRover(s: string): string {
 
         <div class="code-column">
           <h3 class="code-title">374 Complexity</h3>
-          <div class="code-block" onclick="openCodeModal(this, '374 Complexity - TypeScript')">
+          <div
+            class="code-block"
+            onclick="openCodeModal(this, '374 Complexity - TypeScript')"
+          >
             <pre><code class="language-typescript">const DIRECTIONS = 'NESW';
 const DELTA_X = [0, 1, 0, -1];
 const DELTA_Y = [1, 0, -1, 0];
