--- a/index.html
+++ b/index.html
@@ -327,6 +327,11 @@ export function commandRover(instructions: string): string {
               ></textarea>
             </div>
 
+            <div class="form-group">
+              <label for="languages">Programming Languages of Interest</label>
+              <input type="text" id="languages" name="languages" placeholder="e.g., JavaScript, Python, Java, TypeScript..." />
+            </div>
+
             <div class="form-group checkbox-group">
               <label class="checkbox-label">
                 <input type="checkbox" id="updates" name="updates" checked />
