--- a/index.html
+++ b/index.html
@@ -80,19 +80,18 @@
 
         <!-- Video Section -->
         <div class="video-section">
-          <div class="video-thumbnail-container">
-            <a
-              href="https://www.youtube.com/watch?v=rCxbM3IX0X4"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="video-thumbnail-link"
+          <div class="video-embed-container">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/rCxbM3IX0X4?si=gfgpbZA9n1GQOBfJ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
             >
-              <img
-                src="images/talk-screenshot.png"
-                alt="What is Lexical Complexity? - YouTube Video"
-                class="video-thumbnail-image"
-              />
-            </a>
+            </iframe>
           </div>
         </div>
       </div>
@@ -329,7 +328,12 @@ export function commandRover(instructions: string): string {
 
             <div class="form-group">
               <label for="languages">Programming Languages of Interest</label>
-              <input type="text" id="languages" name="languages" placeholder="e.g., JavaScript, Python, Java, TypeScript..." />
+              <input
+                type="text"
+                id="languages"
+                name="languages"
+                placeholder="e.g., JavaScript, Python, Java, TypeScript..."
+              />
             </div>
 
             <div class="form-group checkbox-group">
