clean up and refine

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
           <h1>Boltzmann Analyser</h1>
         </div>
         <div class="nav-links">
-          <a href="#features">Features</a>
           <a href="#register" class="btn-outline">Register Interest</a>
         </div>
       </nav>
@@ -50,7 +49,7 @@
           </p>
           <div class="hero-cta">
             <a href="#register" class="btn-primary">Register Your Interest</a>
-            <a href="#features" class="btn-secondary">Learn More</a>
+            <a href="#explanation" class="btn-secondary">Learn More</a>
           </div>
         </div>
         <div class="hero-visual">
@@ -73,8 +72,7 @@
       </div>
     </section>
 
-    <!-- Features Section -->
-    <section id="features" class="features">
+    <section id="explanation" class="explanation">
       <div class="container">
         <h2 class="section-title">What is Lexical Complexity?</h2>
 
@@ -110,7 +108,7 @@
           <h3 class="code-title">501 Complexity</h3>
           <div
             class="code-block"
-            onclick="openCodeModal(this, '501 Complexity - TypeScript')"
+            onclick="openCodeModal(this, '501 Complexity')"
           >
             <pre><code class="language-typescript">
 type Rover = {
@@ -165,7 +163,7 @@ export function commandRover(rawInstructions: string): string {
           <h3 class="code-title">488 Complexity</h3>
           <div
             class="code-block"
-            onclick="openCodeModal(this, '488 Complexity - TypeScript')"
+            onclick="openCodeModal(this, '488 Complexity')"
           >
             <pre><code class="language-typescript">
 type Rover = { heading: string; x: number; y: number };
@@ -205,10 +203,10 @@ export function commandRover(instructions: string): string {
         </div>
 
         <div class="code-column">
-          <h3 class="code-title">712 Complexity</h3>
+          <h3 class="code-title">412 Complexity</h3>
           <div
             class="code-block"
-            onclick="openCodeModal(this, '712 Complexity - Python')"
+            onclick="openCodeModal(this, '412 Complexity')"
           >
             <pre><code class="language-typescript">const D = ['N', 'E', 'S', 'W'];
 const M = [[0, 1], [1, 0], [0, -1], [-1, 0]];
@@ -242,7 +240,7 @@ export function commandRover(s: string): string {
           <h3 class="code-title">374 Complexity</h3>
           <div
             class="code-block"
-            onclick="openCodeModal(this, '374 Complexity - TypeScript')"
+            onclick="openCodeModal(this, '374 Complexity')"
           >
             <pre><code class="language-typescript">const DIRECTIONS = 'NESW';
 const DELTA_X = [0, 1, 0, -1];
@@ -282,11 +280,6 @@ export function commandRover(instructions: string): string {
       <div class="container">
         <div class="register-content">
           <h2 class="section-title">Register Your Interest</h2>
-          <p class="register-description">
-            Be among the first to experience the future of lexical complexity
-            analysis. Register now for early access and exclusive updates.
-          </p>
-
           <form id="registrationForm" class="registration-form">
             <div class="form-group">
               <label for="name">Full Name *</label>
@@ -383,7 +376,6 @@ export function commandRover(instructions: string): string {
           <div class="footer-links">
             <div class="footer-section">
               <h4>Product</h4>
-              <a href="#features">Features</a>
               <a href="#register">Register Interest</a>
             </div>
             <div class="footer-section">
