--- a/thank-you.html
+++ b/thank-you.html
@@ -166,7 +166,7 @@
               We'll send you early access to Boltzmann Analyser when it's ready
             </li>
             <li>You'll receive exclusive updates on development progress</li>
-            <li>Get priority access to beta features and documentation</li>
+            <li>Get priority access to beta explanation and documentation</li>
             <li>
               Join our community of lexical complexity analysis enthusiasts
             </li>
